# hivemapper-data-logger

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Makefile  READE.md  README.md  RELEASE.md  dl_test_wifi.bash  generate_replay.py  go.mod  go.sum
.github/workflows/: go.yml  test-protoc.yml  test.yml
cmd/datalogger/: datahandler.go  geoutils.go  geoutils_test.go  log.go  log_test.go  magic.go  magnetometer.go  main.go  replay.go  rerun.go  wip.go
data/: average.go  events.go  merger.go  subscription.go
data/camera/: feed.go
data/direction/: directioneventfeed.go  event.go  sql.go  tracker.go
data/gnss/: eventfeed.go  rawfeed.go  replay.go  sql.go
data/imu/: acceleration.go  config.go  correctedfeed.go  directioneventfeed.go  event.go  eventfeed.go  orientationfeed.go  orientationfeed_test.go  orientedfeed.go  orientedfeed_test.go  rawfeed.go  sql.go  tiltcorrectedfaccelerationfeed.go  tracker.go  utils.go  utils_test.go
data/magnetometer/: rawfeed.go  sql.go
data/merged/: imu_raw_sql.go  sql.go
data/redis/: imu_redis.go
data/session/: session.go
download/: dbfile.go
gnss-controller/: .gitignore  .goreleaser.yaml  README.md  go.mod  go.sum  timegetter.go  ubx.go
logger/: interface.go  jsonfile.go  redis.go  sqlite.go  sqlite_test.go  type.go
proto-out/: sensordata.pb.go
python/: README.md  pyproject.toml
python/kalman_filtering/src/: data.py  kalman_filtering_gps_acceleration.py  main.py
python/src/: data.py  kalman_filtering_gps_acceleration.py  main.py  result.py
sf-ublox/: decode.go
tui/: app.go  ui.go
webconnect/: server.go
(+33 files in other folders)
