[tool.poetry]
name = "kalman-filtering-acceleration"
version = "0.1.0"
description = "Kalman filtering data on gps and accelerometer data points"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
#packages = [{incpoetlude = "kalman_filtering_acceleration"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
utm = "^0.7.0"
matplotlib = "^3.7.1"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
